# cfdmod

./: .buildinfo  .gitattributes  .gitignore  CLAUDE.md  README.md  api_reference.html  dagger.json  genindex.html  index.html  join_script.py  objects.inv  pyproject.toml  release_notes.html  search.html  searchindex.js  tox.ini
.dagger/: README.md  pyproject.toml
.github/workflows/: build_and_deploy_artifacts.yaml  deploy_docs.yml  linting.yaml  property_tests.yaml  publish_pypi.yml  testing.yaml  tox_pipeline.yaml
_modules/: index.html
_modules/cfdmod/: notebook_utils.html
_sources/: index.rst  release_notes.md  release_notes.md.txt
_sources/architecture/: data_sources.md.txt
_static/loft/: loft_params.yaml
_static/pressure/: Cf_params.yaml  Cm_params.yaml  pressure_params.yaml
_static/roughness_gen/: position_params.yaml  roughness_params.yaml
analysis/climate/: index.html
analysis/inflow/: index.html  inflow_analysis.html  inflow_analysis.ipynb  length_scale.html  mean_velocity.html  spectral_density.html  turbulence_intensity.html
architecture/: data_sources.html  v3_migration.html
cfdmod/: __init__.py  __main__.py  hfpi_coord.py  hfpi_mock.py  inflow.py  inflow_report.py  logger.py  mesh_field.py  notebook_utils.py  plot_config.py  report.py  utils.py
cfdmod/adapters/: __init__.py
cfdmod/altimetry/: __main__.py  cli.py  main.py  plots.py  probe.py  section.py  shed.py
cfdmod/analysis/: __init__.py
cfdmod/analytical/: __init__.py  wind_profile.py
cfdmod/api/: __init__.py
cfdmod/building/: __init__.py  case.py  comfort.py  dynamic.py  fanout.py  loadcases.py  modes_report.py  peaks.py  pressure.py
cfdmod/climate/: __init__.py  data_fmt.py  lawson.py  weibull.py  wind_profile.py
cfdmod/config/: __init__.py
cfdmod/core/: __init__.py  algebra.py  chunked.py  container.py  container_aliases.py  data_source.py  dtypes.py  errors.py  field_meta.py  freshness.py  grouping.py  pipeline.py  pipeline_yaml.py  protocols.py  time_axis.py  topology.py
cfdmod/dynamics/: __init__.py  __main__.py  cases.py  cli.py  forces.py  plotting.py  structural.py
cfdmod/filters/: __init__.py  core.py  h5.py  specs.py
cfdmod/geometry/: __init__.py  triangle_slicing.py
cfdmod/hfpi/: analysis.py  common.py  dynamic.py  handler.py  static.py
cfdmod/high_rise/: __init__.py  dynamic.py  inflow_report.py  pressure.py
cfdmod/io/: __init__.py  inspect.py  mesh.py  timeseries.py  xdmf.py
cfdmod/loft/: __init__.py  __main__.py  cli.py  functions.py  ground_builder.py  main.py  parameters.py  run.py
cfdmod/pressure/: __init__.py  __main__.py  base_config.py  chunking.py  cli.py  cp_config.py  cp_data.py  extreme_values.py  filters.py  functions.py  geometry.py  main.py  migrate.py  output.py  parameters.py  path_manager.py  run.py  statistics_runner.py
cfdmod/regroup/: __init__.py  __main__.py  cli.py  functions.py  parameters.py  run.py
cfdmod/remesh/: __init__.py  functions.py  pipeline.py
cfdmod/roughness/: __init__.py  __main__.py  build_element.py  cli.py  linear_pattern.py  main.py  parameters.py  radial_pattern.py  run.py
cfdmod/s1/: __init__.py  plotting.py  probe.py  profile.py
cfdmod/snapshot/: __init__.py  __main__.py  building_facade.py  colormap.py  config.py  image_processing.py  snapshot.py
cfdmod/statistics/: __init__.py  core.py  h5.py  specs.py
cfdmod/use_cases/: __init__.py  plot_config.py
docs/: README.md
docs/source/: api_reference.md  api_reference.rst  conf.py  index.md  index.rst  release_notes.md  release_notes.rst
examples/consulting_template/: 01_inflow.ipynb  02_static_loads.ipynb  03_facade.ipynb  README.md
examples/container_pack/: process_container_pack.ipynb
examples/facade_snapshot/: README.md  render_facade_snapshots.py  snapshot_params.yaml
examples/high_rise/: 01_inflow.ipynb  02_cp.ipynb  03_cf.ipynb  04_dynamic.ipynb  05_facade.ipynb  06_structure.ipynb  README.md  _build_notebooks.py  _validate_high_rise.py  _validate_notebooks.py  _validate_pp.py
examples/s1_topographic/: s1_calc_list_of_profiles_from_vtm.ipynb
fixtures/: line.line_profile line.points.csv
fixtures/lnas/: G100.lnas  G100_negative.lnas
fixtures/paraview/: generate_images.pvsm  generate_images.yaml
fixtures/tests/: serie_hist_ponto_do_telhado_separacao.csv
getting_started/: index.html  reading_outputs.html
notebooks/: animation_scripts.ipynb  combine_lnas.ipynb  convert_df.ipynb  correct_dataframe.ipynb  cp_liquid_notebook.ipynb  envelope.ipynb  geometry_api.ipynb  gif.ipynb  global_forces.ipynb  global_forces_per_floor.ipynb  group_cp_timesteps.ipynb  hfpi_analysis_test.ipynb  hfpi_full_test.ipynb  hfpi_mock.py  inspect.ipynb  join_data.ipynb  join_lnas_hs.ipynb  join_surface_hs.ipynb  join_surface_hs_lnas.ipynb  join_surface_hs_lnas_old_cases.ipynb  make_gif.ipynb  make_gif_waine.ipynb  merge_vtp.ipynb  mesh_bug.ipynb  mesh_correct.ipynb  mesh_plot.ipynb  move_files copy.ipynb  move_files.ipynb  peak_rho.ipynb  points_proj.py  position_roughness_elements.ipynb  position_roughness_radial.ipynb  positioning.py  process_container_pack.ipynb  process_images.ipynb  psd_profile_velocity.ipynb  regroup_containers.ipynb  separate_polydata.ipynb  snapshot.ipynb  snapshot_recursive.ipynb  (+4 more)
notebooks/consulting/: generate_roughness_elements.ipynb  s1_calc_list_of_profiles_from_vtm.ipynb
notebooks/esss/: convert_pressure2cp.ipynb  csv2vtp.ipynb
notebooks/examples/: altimetry.ipynb  block_gen.ipynb
notebooks/high_rise/: .gitignore  01_inflow.ipynb  02_cp.ipynb  03_cf.ipynb  04_dynamic.ipynb  05_facade.ipynb  06_structure.ipynb  README.md  _build_notebooks.py  _validate_notebooks.py  _validate_pp.py
notebooks/insight/: envelope.ipynb  (+5 more)
scripts/: combine_lnas_hdf.py  convert_pressure_fixtures.py  generate_schemas.py  gif_to_mp4.sh  h5_cols2string.py  h5_line_to_csv.py  hs_verts2tri.py  old2lnas.py  png_to_gif.sh  velocity_profile_from_h5.py
tests/: README.md  conftest.py  strategies.py  test_import_weight.py  test_inflow_report.py  test_mesh_field_sampling.py  test_mesh_field_slice.py  test_report.py  test_utils.py
(+765 files in other folders)
