[tool.poetry]
name = "cfdmod"
version = "1.1.1"
description = "Tools for analysis of CFD cases"
authors = ["Waine Oliveira Jr <waine@aerosim.io>", "Pablo Penas <pablo@aerosim.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.13"
numpy = "^1.26.0"
scipy = "^1.11.2"
pandas = "^2.1.0"
pydantic = "^2.3"
ruamel-yaml = "^0.18.5"
tables = "^3.9.1"
colorama = "^0.4.6"
matplotlib = "^3.7.3"
pyarrow = "^15.0.0"
tox = "^4.18.0"

[tool.poetry.group.lnas]
optional = true

[tool.poetry.group.lnas.dependencies]
lnas = { git = "git@github.com:AeroSim-CFD/lnas.git", branch="main" }

[tool.poetry.group.geometry]
optional = true

[tool.poetry.group.geometry.dependencies]
pymeshlab = "^2023"
trimesh = "^3.23.5"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.7.0"}
isort = {extras = ["jupyter"], version = "^5.12.0"}
autoflake = "^2.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.0.1"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2021.3.14"
nbsphinx = "^0.9.3"
sphinxcontrib-bibtex = "^2.6.1"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"
ipython = "^8.15.0"
ipykernel = "^6.25.2"

[tool.poetry.group.vtk]
optional = true

[tool.poetry.group.vtk.dependencies]
vtk = "^9.2.6"
pyvista = "^0.43.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '(\.pyi?$|\.ipynb)'
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 99
src_paths = ["cfdmod", "tests", "notebooks"]
skip_glob = ["**/__init__.py"] # avoid circular imports

[tool.ruff]
fixable = ["ALL"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 99
target-version = "py310"