[project]
name = "aerosim-cfdmod"
version = "2.0.0"
description = "Tools for analysis of CFD cases"
authors = [
    { name = "Waine Oliveira Jr", email = "waine@aerosim.io" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.11.2,<2",
    "pandas>=2.1.0,<3",
    "pydantic>=2.3,<3",
    "ruamel-yaml>=0.18.5,<0.19",
    "colorama>=0.4.6,<0.5",
    "matplotlib>=3.7.3,<4",
    "pyarrow>=19.0.0,<20",
    "aerosim-lnas>=0.6.9,<0.7",
    "openpyxl>=3.1.5",
    "h5py>=3.15.1",
    "typer>=0.24.1",
]

[project.optional-dependencies]
# Geometry helpers used by altimetry/loft. Trimesh is MIT-licensed.
# pymeshlab is INTENTIONALLY NOT a dependency here (optional or otherwise):
# its license is GPL, so installing it would force GPL on downstream users.
# Code paths that need pymeshlab are documented and the user is expected to
# install it explicitly (`pip install pymeshlab`) at their own license risk.
geometry = [
    "trimesh>=4.0,<5",
]
docs = [
    "shibuya>=2026.0",
    "myst-parser>=4.0,<5",
    "sphinx-autobuild>=2021.3.14",
    "nbsphinx>=0.9.3,<0.10",
    "sphinxcontrib-bibtex>=2.6.1,<3",
    "sphinx-sitemap>=2.6",
]
notebook = [
    "jupyter>=1.0.0,<2",
    "ipython>=8.15.0,<9",
    "ipykernel>=6.25.2,<7",
]
vtk = [
    "vtk>=9.2.6,<10",
    "pyvista>=0.44,<0.45",
]
# Required only for the legacy pandas-HDFStore compat readers in
# cfdmod.analysis.inflow, cfdmod.hfpi.static, and cfdmod.pressure.migrate.
# Modern XDMF+H5 inputs go through h5py and don't need this.
legacy = [
    "tables>=3.9.1,<4",
]

[project.scripts]
cfdmod = "cfdmod.__main__:app"

[project.urls]
Homepage = "https://github.com/AeroSim-CFD/cfdmod"
Repository = "https://github.com/AeroSim-CFD/cfdmod"

[dependency-groups]
dev = [
    "black[jupyter]>=23.7.0",
    "isort>=5.12.0",
    "tox>=4.18.0,<5",
    "autoflake>=2.2.1,<3",
    "json-schema-for-humans>=1.0.2,<2",
    "pytest>=8.3.2,<9",
    "ruff>=0.6.8",
    # tests/analysis/inflow + tests/pressure/test_migrate exercise the
    # legacy HDFStore compat readers, so dev installs need pytables.
    "tables>=3.9.1,<4",
]

[tool.hatch.build.targets.sdist]
include = ["cfdmod"]

[tool.hatch.build.targets.wheel]
include = ["cfdmod"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
# -m 'not perf' excludes the perf-marked tests by default. Run them on
# demand with ``pytest -m perf`` (synthesises body+probe, runs full
# Cp/Cf/Cm chain on configurable big data).
addopts = "-ra -q -m 'not perf'"
testpaths = ["tests"]
# Selection cheatsheet:
#   pytest -m unit                -> fast, pure-function tests
#   pytest -m integration         -> end-to-end pipeline tests (read real fixture h5)
#   pytest -m "unit or integration"  -> default (everything except perf)
#   pytest -m perf                -> opt-in benchmark (synthetic data, minutes)
markers = [
    "unit: pure-function tests with no real-data fixtures or pipeline orchestration",
    "integration: end-to-end pipeline tests that exercise multiple components together",
    "perf: pipeline performance benchmarks on synthetic big data; opt-in via -m perf",
]

[tool.black]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '(\.pyi?$|\.ipynb)'
line-length = 99
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 99
src_paths = ["cfdmod", "tests", "notebooks"]
skip_glob = ["**/__init__.py"] # avoid circular imports

[tool.ruff]
lint.fixable = ["ALL"]
# Exclude a variety of commonly ignored directories.
exclude = [
    "consulting",
    "paraview",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 99
target-version = "py310"
