[project]
name = "aerosim-cfdmod"
version = "3.2.0"
description = "Tools for analysis of CFD cases"
authors = [
    { name = "Waine Oliveira Jr", email = "waine@aerosim.io" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
# Lower bounds are the minimum tested versions; upper caps are intentionally
# omitted so this library can be co-installed as a dependency without forcing
# resolution conflicts on consumers (e.g. a project that needs pandas 3.x).
# Keep these as floors only -- pin in the consuming application, not here.
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "pydantic>=2.10",
    "ruamel-yaml>=0.18.5",
    "colorama>=0.4.6",
    "matplotlib>=3.9",
    "pyarrow>=19.0.0",
    "aerosim-lnas>=0.6.9",
    "openpyxl>=3.1.5",
    "h5py>=3.15.1",
    "typer>=0.24.1",
]

[project.optional-dependencies]
# Geometry helpers used by altimetry/loft. Trimesh is MIT-licensed.
# pymeshlab is INTENTIONALLY NOT a dependency here (optional or otherwise):
# its license is GPL, so installing it would force GPL on downstream users.
# Code paths that need pymeshlab are documented and the user is expected to
# install it explicitly (`pip install pymeshlab`) at their own license risk.
# fast-simplification (under [project.optional-dependencies].remesh below)
# is the approved QEM decimator: MIT-licensed, wraps the
# Fast-Quadric-Mesh-Simplification C++ implementation.
geometry = [
    "trimesh>=4.0",
]
remesh = [
    "fast-simplification>=0.1",
]
docs = [
    "shibuya>=2026.0",
    "myst-parser>=4.0,<6",
    "sphinx-autobuild>=2021.3.14",
    "nbsphinx>=0.9.3,<0.10",
    "sphinxcontrib-bibtex>=2.6.1,<3",
    "sphinx-sitemap>=2.6",
]
notebook = [
    "jupyter>=1.0.0,<2",
    "ipython>=8.15.0,<10",
    "ipykernel>=6.25.2,<8",
]
vtk = [
    "vtk>=9.2.6",
    "pyvista>=0.44",
]
# Everything cfdmod.snapshot needs to render (ParaView/VTK snapshots + the
# mesh_field PyVista paths). Same render stack as `vtk`, named for the feature.
# On a headless host the render is off-screen and needs a virtual display
# (xvfb) or an OSMesa/EGL VTK build; plain `vtk` wheels use OpenGL.
snapshot = [
    "vtk>=9.2.6",
    "pyvista>=0.44",
]
# Required only for the legacy pandas-HDFStore compat readers in
# cfdmod.inflow, cfdmod.hfpi.static, and cfdmod.pressure.migrate.
# Modern XDMF+H5 inputs go through h5py and don't need this.
legacy = [
    "tables>=3.9.1,<4",
]

[project.scripts]
cfdmod = "cfdmod.__main__:app"

[project.urls]
Homepage = "https://github.com/AeroSim-CFD/cfdmod"
Repository = "https://github.com/AeroSim-CFD/cfdmod"

[dependency-groups]
dev = [
    "tox>=4.53",
    "json-schema-for-humans>=1.5",
    "pytest>=9",
    # Property-based / fuzz testing for the v3 data-source layer (issue #141).
    # Test-only; drives the strategies in tests/strategies.py and the
    # ``property``-marked tests.
    "hypothesis>=6",
    "ruff>=0.15",
    # tests/inflow + tests/pressure/test_migrate exercise the legacy
    # HDFStore compat readers, so dev installs need pytables.
    # (Held at <3.11 floor for py3.10 compatibility; bump alongside
    # requires-python whenever py3.10 support is dropped.)
    "tables>=3.9.1,<4",
]

[tool.hatch.build.targets.sdist]
include = ["cfdmod"]

[tool.hatch.build.targets.wheel]
include = ["cfdmod"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
# -m 'not perf' excludes the perf-marked tests by default. Run them on
# demand with ``pytest -m perf`` (synthesises body+probe, runs full
# Cp/Cf/Cm chain on configurable big data).
addopts = "-ra -q -m 'not perf'"
testpaths = ["tests"]
# Selection cheatsheet:
#   pytest -m unit                -> fast, pure-function tests
#   pytest -m integration         -> end-to-end pipeline tests (read real fixture h5)
#   pytest -m "unit or integration"  -> default (everything except perf)
#   pytest -m perf                -> opt-in benchmark (synthetic data, minutes)
markers = [
    "unit: pure-function tests with no real-data fixtures or pipeline orchestration",
    "integration: end-to-end pipeline tests that exercise multiple components together",
    "perf: pipeline performance benchmarks on synthetic big data; opt-in via -m perf",
    "property: hypothesis-driven generative tests over the v3 data-source layer; run with a larger example budget nightly via -m property",
]

[tool.ruff]
lint.fixable = ["ALL"]
# Enable import sorting (replaces isort; equivalent to isort's black profile).
lint.extend-select = ["I"]
# Notebooks frequently re-define helpers across cells (didactic style); F811
# (redefinition of unused name) is noise there. __init__.py files are exempt
# from import sorting (I001) to avoid reordering that breaks circular imports
# (previously isort's ``skip_glob = ["**/__init__.py"]``).
lint.per-file-ignores = { "*.ipynb" = ["F811"], "**/__init__.py" = ["I001"] }
# Exclude a variety of commonly ignored directories.
exclude = [
    "consulting",
    # Example notebooks are generated by _build_notebooks.py (which IS linted)
    # and verified by executing them (_validate_notebooks.py); their didactic
    # toolkit-import setup cells are not held to lint/format rules. The
    # generator, tutorials, library and tests all remain linted.
    "examples/**/*.ipynb",
    "paraview",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 99
target-version = "py310"

# ``ruff format`` replaces black (same style, line-length 99). It formats
# .py and .ipynb by default, matching the old black[jupyter] setup.
[tool.ruff.format]
quote-style = "double"
